--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,50 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">10</td><td class="num">1,696</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,230</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="10">tests.Library</td><td><a href="#m0">testE2E</a></td><td rowspan="10">1728341929818</td><td rowspan="10">1</td></tr><tr class="failedeven"><td><a href="#m1">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m2">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m3">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m4">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m5">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m6">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m7">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m8">testE2E</a></td></tr><tr class="failedeven"><td><a href="#m9">testE2E</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.Jira</td><td><a href="#m0">addAttachment</a></td><td rowspan="1">1728491044636</td><td rowspan="1">1836</td></tr><tr class="passedeven"><td><a href="#m1">createIssue</a></td><td rowspan="1">1728491041671</td><td rowspan="1">2957</td></tr><tr class="passedeven"><td><a href="#m2">deleteIssue</a></td><td rowspan="1">1728491047414</td><td rowspan="1">954</td></tr><tr class="passedeven"><td><a href="#m3">getIssue</a></td><td rowspan="1">1728491046476</td><td rowspan="1">936</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Mutation testing, aisle=5634, author=Aishwarya, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=BDD with Java, aisle=8623, author=Elavarasan, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Load testing, aisle=9804, author=Rahul, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Postman, aisle=9874, author=Elavarasan, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=DB testing, aisle=4523, author=Rahul, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Security testing, aisle=7634, author=Aishwarya, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Penetration testing, aisle=5623, author=Elavarasan, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Soap UI, aisle=7834, author=Rahul, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=GraphQL, aisle=6723, author=Aishwarya, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">tests.Library#testE2E</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{book_name=Selenium with Python, aisle=6543, author=Aishwarya, isbn=ISBN}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader &apos;bootstrap&apos;)
-	at tests.Library.testE2E(Library.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.Jira#addAttachment</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.Jira#createIssue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.Jira#deleteIssue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.Jira#getIssue</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
